fix(sidebar): reduce margins to avoid extra scrollbars on small resolutions

--- a/src/layouts/section/styles.module.scss
+++ b/src/layouts/section/styles.module.scss
@@ -48,7 +48,7 @@
 
   @media (min-width: $theme-breakpoints-mobile) {
     display: block;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -115,7 +115,7 @@
   }
 
   @media (min-width: $theme-breakpoints-mobile) {
-    margin: 1.5rem 0;
+    margin: 0 0 1rem;
     padding-left: 3.125rem;
     flex-direction: column;
     justify-content: flex-end;
@@ -124,7 +124,7 @@
     .newsletter-form {
       display: block;
       margin-right: 0;
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
     }
   }
 }
